--- a/style.css
+++ b/style.css
@@ -113,8 +113,86 @@ hr{
 }
 .plan{
     margin-top: 12%;
-    font-size: 12px;
+    font-size: 14px;
 }
 .need{
     gap: 2%;
+    display: flex;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+.plan-a{
+    background-color: bisque;
+    width: 350px;
+    height: 250px;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+.plan-b{
+    background-color: rgb(248, 210, 216);
+    width: 350px;
+    height: 250px;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+.plan-c{
+    background-color: rgb(238, 219, 192);
+    width: 350px;
+    height: 250px;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+span{
+    color: brown;
+}
+.pic-a{
+    display: flex;
+    margin-top: 10%;
+    margin-left: 2%;
+    height: 50%;
+}
+.para-a{
+    width: 100%;
+    padding-left: 10%;
+}
+.para-a img{
+   width: 80%;
+   margin-top: 5%;
+}
+.pic-b{
+    display: flex;
+    margin-top: 10%;
+    margin-left: 2%;
+    margin-right: 5%;
+    height: 50%;
+}
+.last-para {
+    background-color: bisque;
+    margin-left: 350px;
+    margin-right: 100px;
+    width: 500px;
+    height: 100px;
+}
+.button-end{
+    text-decoration: none;
+    background-image: linear-gradient(orange, red);
+    color: aliceblue;
+    font-weight: 700px;
+    padding: 5px 5px;
+    border-radius: 5px;
+}
+footer{
+    background-color: black;
+    width: 100%;
+    height: 150px;
+}
+h2{
+    text-align: center;
+    color: orange;
+    font-weight: 900px;
+    padding-top: 2%;
+}
+h6{
+    text-align: center;
+    color: aliceblue;
 }
